--- a/index.html
+++ b/index.html
@@ -1031,7 +1031,7 @@
 
     <section id="about">
         <div class="container">
-            <h2>🌟 About the Competition</h2>
+            <h2>About the Competition</h2>
             <p class="section-subtitle">Empowering students to create meaningful change through innovation</p>
             <div class="about-content">
                 <div class="about-card">
@@ -1048,7 +1048,7 @@
                 </div>
             </div>
 
-            <h3 style="text-align: center; margin-top: 4rem; font-size: 2.5rem; background: linear-gradient(135deg, #4a7c2c, #2d5016); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">🎨 Focus Areas</h3>
+            <h3 style="text-align: center; margin-top: 4rem; font-size: 2.5rem; background: linear-gradient(135deg, #4a7c2c, #2d5016); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Focus Areas</h3>
             <p class="section-subtitle">Areas where your innovation can make a difference</p>
             <div class="focus-grid">
                 <div class="focus-item">
@@ -1081,7 +1081,7 @@
 
     <section id="eligibility" class="section-alt eligibility-section">
         <div class="container">
-            <h2>📋 Eligibility & Rules</h2>
+            <h2>Eligibility & Rules</h2>
             <p class="section-subtitle">Who can participate and what are the guidelines</p>
             <div class="eligibility-container">
                 <div class="eligibility-box">
@@ -1117,7 +1117,7 @@
 
     <section id="timeline" class="timeline-section">
         <div class="container">
-            <h2>🌳 Timeline & Important Dates</h2>
+            <h2>Timeline & Important Dates</h2>
             <p class="section-subtitle">Follow our journey from registration to winner announcement</p>
             <div class="timeline-tree">
                 <div class="timeline-item">
@@ -1170,7 +1170,7 @@
 
     <section id="criteria">
         <div class="container">
-            <h2>⚖️ Judging Criteria</h2>
+            <h2>Judging Criteria</h2>
             <p class="section-subtitle">How we evaluate your innovative ideas</p>
             <div class="criteria-grid">
                 <div class="criteria-item">
