--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -1903,10 +1902,10 @@ footer p {
 <section id="home" class="hero">
         <div class="slider-container">
             <div class="slide active">
-                <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?w=1600&q=80" alt="Team collaboration">
+                <img src="https://i.postimg.cc/tCXqqsVt/Gemini-Generated-Image-nlpj4lnlpj4lnlpj.png" alt="Team collaboration">
             </div>
             <div class="slide">
-                <img src="https://images.unsplash.com/photo-1573164713714-d95e436ab8d6?w=1600&q=80" alt="Innovation">
+                <img src="https://i.postimg.cc/d1vX2yFp/Gemini-Generated-Image-hvzoffhvzoffhvzo.png" alt="Innovation">
             </div>
             <div class="slide">
                 <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?w=1600&q=80" alt="Social impact">
@@ -2401,16 +2400,7 @@ By encouraging creativity, critical thinking, and problem-solving, the competiti
         </div>
     </section>
 
-    <section id="eligibility" class="section-alt eligibility-section">
-        <div class="container">
-            <h2>Eligibility & Rules</h2>
-            <p class="section-subtitle">Who can participate and what are the guidelines</p>
-
-
-
-
-
-
+     
 
 
 
@@ -2800,43 +2790,5 @@ setInterval(() => {
             observer.observe(section);
         });
     </script>
-<!-- Code injected by live-server -->
-<script>
-	// <![CDATA[  <-- For SVG support
-	if ('WebSocket' in window) {
-		(function () {
-			function refreshCSS() {
-				var sheets = [].slice.call(document.getElementsByTagName("link"));
-				var head = document.getElementsByTagName("head")[0];
-				for (var i = 0; i < sheets.length; ++i) {
-					var elem = sheets[i];
-					var parent = elem.parentElement || head;
-					parent.removeChild(elem);
-					var rel = elem.rel;
-					if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
-						var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
-						elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
-					}
-					parent.appendChild(elem);
-				}
-			}
-			var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
-			var address = protocol + window.location.host + window.location.pathname + '/ws';
-			var socket = new WebSocket(address);
-			socket.onmessage = function (msg) {
-				if (msg.data == 'reload') window.location.reload();
-				else if (msg.data == 'refreshcss') refreshCSS();
-			};
-			if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
-				console.log('Live reload enabled.');
-				sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
-			}
-		})();
-	}
-	else {
-		console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
-	}
-	// ]]>
-</script>
 </body>
 </html>
