--- a/index.html
+++ b/index.html
@@ -1908,10 +1908,10 @@ footer p {
                 <img src="https://i.postimg.cc/d1vX2yFp/Gemini-Generated-Image-hvzoffhvzoffhvzo.png" alt="Innovation">
             </div>
             <div class="slide">
-                <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?w=1600&q=80" alt="Social impact">
+                <img src="https://i.postimg.cc/3xzWxKhH/Gemini-Generated-Image-ndkcv3ndkcv3ndkc.png" alt="Social impact">
             </div>
             <div class="slide">
-                <img src="https://images.unsplash.com/photo-1531482615713-2afd69097998?w=1600&q=80" alt="Presentation">
+                <img src="https://i.postimg.cc/G2KcGRWY/Gemini-Generated-Image-31g4g231g4g231g4.png" alt="Presentation">
             </div>
             
             <div class="slider-overlay"></div>
