--- a/index.html
+++ b/index.html
@@ -1826,9 +1826,13 @@ footer p {
 <body>
     <nav>
         <div class="container">
-            <div class="logo">
-                <span></span> IEEE DIU SIGHT Group
-            </div>
+           <div class="logo" style="display:flex; align-items:center; gap:0.6rem;">
+    <img src="https://i.postimg.cc/cK4sKkTQ/image.png"
+         alt="IEEE DIU SIGHT Logo"
+         style="height:50px; width:50px; object-fit:contain;">
+    <span>DIU IEEE SB SIGHT </span>
+</div>
+
             <button class="mobile-menu-btn" onclick="toggleMenu()">☰</button>
             <ul id="navMenu">
                 <li><a href="#home">Home</a></li>
