Update HTML content for IEEE SB SIGHT Group

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         nav ul {
             list-style: none;
             display: flex;
-            gap: 2rem;
+            gap: 1rem;
         }
 
         nav a {
@@ -1830,7 +1830,7 @@ footer p {
     <img src="https://i.postimg.cc/cK4sKkTQ/image.png"
          alt="IEEE DIU SIGHT Logo"
          style="height:50px; width:50px; object-fit:contain;">
-    <span>DIU IEEE SB SIGHT </span>
+    <span>DIU IEEE SB SIGHT Group </span>
 </div>
 
             <button class="mobile-menu-btn" onclick="toggleMenu()">☰</button>
@@ -1935,7 +1935,7 @@ footer p {
         <div class="hero-content">
             <h1>💡 Innovate for Humanity</h1>
             <p style="color: white; font-size: 2.2rem; font-weight: 300; margin-bottom: 1rem;">IEEE DIU SIGHT Group Idea Pitching Competition</p>
-            <p style="color: white;">An initiative by DIU IEEE SIGHT Chapter to promote technology-driven solutions for social good</p>
+            <p style="color: white;">An initiative by DIU IEEE SB SIGHT Group to promote technology-driven solutions for social good</p>
             <div class="cta-buttons">
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdxpyuwG-1xXZvAOjhu5vsXA3RXf1aC4VCeElslFavK6bjuNQ/viewform" target="_blank" class="btn btn-primary">
                     <span>📝</span> Register Now
@@ -1957,7 +1957,7 @@ footer p {
             <p class="section-subtitle">Empowering students to create meaningful change through innovation</p>
             <div class="about-content">
                 <div class="about-card">
-                    <h3 >🤝 What is IEEE SIGHT?</h3>
+                    <h3 >🤝 What is IEEE SB SIGHT Group?</h3>
                     <p style="text-align: justify;">IEEE Special Interest Group on Humanitarian Technology (SIGHT) is a global network of IEEE volunteers dedicated to applying engineering knowledge and technological innovation to address real-world humanitarian and social challenges. SIGHT works closely with underserved communities, non-profit organizations, and local partners to co-create sustainable, ethical, and impactful solutions.
 
 The initiative focuses on improving quality of life by promoting community-driven development, empowering local stakeholders, and ensuring that technology is accessible, inclusive, and socially responsible. Through interdisciplinary collaboration, IEEE SIGHT encourages students and professionals to transform innovative ideas into practical solutions that create long-term positive change in society.</p>
@@ -2549,7 +2549,7 @@ By encouraging creativity, critical thinking, and problem-solving, the competiti
 
     <section id="contact">
         <div class="container">
-            <h2>📞 Contact & FAQ</h2>
+            <!-- <h2>📞 Contact & FAQ</h2>
             <p class="section-subtitle">Get in touch with us or find answers to common questions</p>
             <div class="contact-info">
                 <div class="contact-card">
@@ -2643,7 +2643,7 @@ By encouraging creativity, critical thinking, and problem-solving, the competiti
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     
 <footer>
