--- a/index.html
+++ b/index.html
@@ -2998,32 +2998,35 @@ By encouraging creativity, critical thinking, and problem-solving, the competiti
                     </div>
                 </div>
 
-                <div class="timeline-item">
+                <!-- <div class="timeline-item">
                     <div class="timeline-dot">🎯</div>
                     <div class="timeline-content">
                         <h3>🎯 Shortlisting Announcement</h3>
                         <div class="timeline-date"><b>(To be anounced)</b></div>
                         <p>Selected teams will be notified via email and website. Check your inbox for the exciting news!</p>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="timeline-item">
+                <!-- <div class="timeline-item">
                     <div class="timeline-dot">🎤</div>
                     <div class="timeline-content">
                         <h3>🎤 Pitching Day</h3>
                         <div class="timeline-date"><b>(To be anounced)</b></div>
                         <p>Present your ideas to judges and audience. This is your moment to shine and make an impact!</p>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="timeline-item">
                     <div class="timeline-dot">🏆</div>
                     <div class="timeline-content">
-                        <h3>🏆 Result Announcement</h3>
+                        <h3>Result Announcement & Award Ceremony </h3>
                         <div class="timeline-date"><b>(To be anounced)</b></div>
                         <p>Winners will be announced and awarded. Celebrate your achievements with us!</p>
                     </div>
                 </div>
+
+
+                
             </div>
         </div>
     </section>
