--- a/index.html
+++ b/index.html
@@ -2299,7 +2299,7 @@ By encouraging creativity, critical thinking, and problem-solving, the competiti
 
 
 
- 
+<!-- <!--  
 
             <h3 style="text-align: center; margin-top: 4rem; font-size: 2.5rem; background: linear-gradient(135deg, #4a7c2c, #2d5016); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Focus Areas</h3>
             <p class="section-subtitle">Areas where your innovation can make a difference</p>
@@ -2324,12 +2324,12 @@ By encouraging creativity, critical thinking, and problem-solving, the competiti
                     <div class="focus-icon">🌍</div>
                     <h4>Environment</h4>
                 </div> -->
-                <div class="focus-item">
+                <!-- <div class="focus-item">
                     <div class="focus-icon">🤖</div>
                     <h4>Smart Technology</h4>
                 </div>
-            </div>
-        </div>
+            </div> -->
+        </div> --> -->
     </section>
 
 
