--- a/index.html
+++ b/index.html
@@ -2368,7 +2368,7 @@ By encouraging creativity, critical thinking, and problem-solving, the competiti
                     <p>Cash Prize & Certificate</p>
                 </div>
                 <div class="prize-card">
-                    <div class="prize-icon">⭐</div>
+                    <div class="prize-icon">🥉</div>
                     <h3>2<sup>nd</sup> Runner-up</h3>
 
                       
