--- a/index.html
+++ b/index.html
@@ -2258,7 +2258,7 @@ footer p {
             <p style="color: white; font-size: 2.2rem; font-weight: 300; margin-bottom: 1rem;">IEEE DIU SB SIGHT Group Presents Idea Competition</p>
             <p style="color: white;">An initiative by IEEE DIU SB SIGHT Group to promote technology-driven solutions for social good</p>
             <div class="cta-buttons">
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdxpyuwG-1xXZvAOjhu5vsXA3RXf1aC4VCeElslFavK6bjuNQ/viewform" target="_blank" class="btn btn-primary">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSeB3wWLK5Gz1rtQd9VUvyz6odVFZy148_i9doEQ3BLX2lv7yA/viewform?usp=dialog" target="_blank" class="btn btn-primary">
                     <span>📝</span> Register Now
                 </a>
             </div>
