--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IEEE DIU SB SIGHT Group Idea Pitching Competition</title>
+    <title>IEEE DIU SB SIGHT Group Idea Contest</title>
     <style>
         * {
             margin: 0;
@@ -2173,7 +2173,7 @@ footer p {
     <!-- <section id="home" class="hero">
         <div class="hero-content">
             <h1>💡 Innovate for Huminity </h1>
-            <h2>IEEE DIU SIGHT Group Idea Pitching Competition</h2>
+            <h2>IEEE DIU SIGHT Group Idea Pitching Contest</h2>
             <p>An initiative by DIU IEEE SIGHT Chapter to promote technology-driven solutions for social good</p>
             <div class="cta-buttons">
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdxpyuwG-1xXZvAOjhu5vsXA3RXf1aC4VCeElslFavK6bjuNQ/viewform" target="_blank" class="btn btn-primary">
@@ -2189,7 +2189,7 @@ footer p {
     <!-- <section id="home" class="hero">
     <div class="hero-content">
         <h1>💡 Innovate for Huminity </h1>
-        <p style="color: #e8f5e9;">IEEE DIU SIGHT Group Idea Pitching Competition</p2>
+        <p style="color: #e8f5e9;">IEEE DIU SIGHT Group Idea Pitching Contest</p2>
         <p>An initiative by DIU IEEE SIGHT Chapter to promote technology-driven solutions for social good</p>
         
     </div>
@@ -2255,7 +2255,7 @@ footer p {
         
         <div class="hero-content">
             <h1>💡 Innovate for Humanity</h1>
-            <p style="color: white; font-size: 2.2rem; font-weight: 300; margin-bottom: 1rem;">IEEE DIU SB SIGHT Group Presents Idea Competition</p>
+            <p style="color: white; font-size: 2.2rem; font-weight: 300; margin-bottom: 1rem;">IEEE DIU SB SIGHT Group Presents Idea Contest</p>
             <p style="color: white;">An initiative by IEEE DIU SB SIGHT Group to promote technology-driven solutions for social good</p>
             <div class="cta-buttons">
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSeB3wWLK5Gz1rtQd9VUvyz6odVFZy148_i9doEQ3BLX2lv7yA/viewform?usp=dialog" target="_blank" class="btn btn-primary">
@@ -2274,7 +2274,7 @@ footer p {
 
     <section id="about">
         <div class="container">
-            <h2>About the Competition</h2>
+            <h2>About the Contest</h2>
             <p class="section-subtitle">Empowering students to create meaningful change through innovation</p>
             <div class="about-content">
                 <div class="about-card">
@@ -2284,10 +2284,10 @@ footer p {
 The initiative focuses on improving quality of life by promoting community-driven development, empowering local stakeholders, and ensuring that technology is accessible, inclusive, and socially responsible. Through interdisciplinary collaboration, IEEE SIGHT encourages students and professionals to transform innovative ideas into practical solutions that create long-term positive change in society.</p>
                 </div>
                 <div class="about-card">
-                    <h3>💭 Why This Competition?</h3>
-                    <p style="text-align: justify;">We believe in empowering students to become innovators and changemakers who can create meaningful and lasting impact in society. This competition is designed to provide a supportive platform where aspiring minds can explore, develop, and present technology-driven solutions to real-world social and humanitarian challenges.
+                    <h3>💭 Why This Contest?</h3>
+                    <p style="text-align: justify;">We believe in empowering students to become innovators and changemakers who can create meaningful and lasting impact in society. This Contest is designed to provide a supportive platform where aspiring minds can explore, develop, and present technology-driven solutions to real-world social and humanitarian challenges.
 
-By encouraging creativity, critical thinking, and problem-solving, the competition helps participants transform their ideas into actionable concepts. It also fosters collaboration, social responsibility, and innovation, inspiring students to use technology as a tool for positive change and sustainable development.</p>
+By encouraging creativity, critical thinking, and problem-solving, the Contest helps participants transform their ideas into actionable concepts. It also fosters collaboration, social responsibility, and innovation, inspiring students to use technology as a tool for positive change and sustainable development.</p>
                 </div>
                 <!-- <div class="about-card">
                     <h3>Instruction </h3>
@@ -2626,7 +2626,7 @@ By encouraging creativity, critical thinking, and problem-solving, the competiti
                     <p class="fee-description">For registered IEEE members with valid membership</p>
                     <ul class="fee-benefits">
                         <li>✓ No registration fee</li>
-                        <li>✓ Full competition access</li>
+                        <li>✓ Full Contest access</li>
                         <li>✓ All prizes & benefits</li>
                         <li>✓ IEEE networking opportunities</li>
                     </ul>
@@ -2639,7 +2639,7 @@ By encouraging creativity, critical thinking, and problem-solving, the competiti
                     <p class="fee-description">For non-IEEE members and general participants</p>
                     <ul class="fee-benefits">
                         <li>✓ One-time registration fee</li>
-                        <li>✓ Full competition access</li>
+                        <li>✓ Full Contest access</li>
                         <li>✓ All prizes & benefits</li>
                         <li>✓ Participation certificate</li>
                     </ul>
@@ -3092,7 +3092,7 @@ By encouraging creativity, critical thinking, and problem-solving, the competiti
                         <span>+</span>
                     </div>
                     <div class="faq-answer">
-                        Yes! The competition is open to all DIU students regardless of their year of study. We encourage first-year students to participate and showcase their innovative ideas.
+                        Yes! The Contest is open to all DIU students regardless of their year of study. We encourage first-year students to participate and showcase their innovative ideas.
                     </div>
                 </div>
 
@@ -3102,7 +3102,7 @@ By encouraging creativity, critical thinking, and problem-solving, the competiti
                         <span>+</span>
                     </div>
                     <div class="faq-answer">
-                        No, the competition is completely free to participate. There are no registration or submission fees.
+                        No, the Contest is completely free to participate. There are no registration or submission fees.
                     </div>
                 </div>
 
