--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -2145,7 +2146,7 @@ footer p {
    <nav>
     <div class="container">
         <div class="logo" style="display:flex; align-items:center; gap:0.4rem;">
-            <img src="https://i.postimg.cc/cK4sKkTQ/image.png"
+            <img src="https://lh3.googleusercontent.com/d/1gjTgytjFynd4udSKZxtSrM7FKkPcE9P1"
                  alt="IEEE DIU SIGHT Logo"
                  style="height:35px; width:35px; object-fit:contain;">
             <span>IEEE DIU SB SIGHT Group</span>
@@ -2228,9 +2229,9 @@ footer p {
 <section id="home" class="hero">
         <div class="slider-container">
             <div class="slide active">
-                <img src="https://i.postimg.cc/tCXqqsVt/Gemini-Generated-Image-nlpj4lnlpj4lnlpj.png" alt="Team collaboration">
-            </div>
-            <div class="slide">
+    <img src="https://lh3.googleusercontent.com/d/13GegJ4rf8hjLU_6Cw1VC0WxwVZPozajx" alt="Team collaboration">
+</div>
+    <div class="slide">
                 <img src="https://i.postimg.cc/d1vX2yFp/Gemini-Generated-Image-hvzoffhvzoffhvzo.png" alt="Innovation">
             </div>
             <!-- <div class="slide">
@@ -3144,7 +3145,7 @@ By encouraging creativity, critical thinking, and problem-solving, the Contest h
     <div class="container">
         <div class="footer-logos">
            <div class="footer-logo-item">
-        <a href="https://www.facebook.com/profile.php?id=61582082533297"  >      <img src="https://i.postimg.cc/cK4sKkTQ/image.png" alt="IEEE DIU SB SIGHT Group"> </a>
+        <a href="https://www.facebook.com/profile.php?id=61582082533297"  >       <img src="https://lh3.googleusercontent.com/d/1gjTgytjFynd4udSKZxtSrM7FKkPcE9P1" alt="IEEE DIU SB SIGHT Group"> </a>
                 <p>IEEE DIU SB SIGHT Group</p>
             </div>
             <div class="footer-logo-item">
@@ -3152,7 +3153,7 @@ By encouraging creativity, critical thinking, and problem-solving, the Contest h
                 <p>Daffodil International University</p>
             </div>
             <div class="footer-logo-item">
-         <a href="https://www.facebook.com/diuieee/">         <img src="https://i.postimg.cc/Jtgtf8Kr/image.png" alt="IEEE DIU Student Branch"> </a>
+         <a href="https://www.facebook.com/diuieee/">         <img src="https://lh3.googleusercontent.com/d/181BJcGV2dxrkaVoZRRQCI9yuateewxH5" alt="IEEE DIU Student Branch"> </a>
                 <p>IEEE DIU Student Branch</p>
             </div>
             
