--- a/index.html
+++ b/index.html
@@ -1743,10 +1743,13 @@ footer p {
     text-align: center;
     color: white;
     max-width: 1000px;
-    padding: 0 2rem;
+padding-top: 40px;
+    margin-top: -230px;
+
+
+   
     text-shadow: 2px 2px 20px rgba(0,0,0,0.7);
 }
-
 .hero h1 {
     font-size: 3.5rem;
     margin-bottom: 1rem;
